# NSEngine_v2

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: defines.h  entry.h  game_types.h
engine/src/containers/: freelist.cpp  freelist.h  hashtable.cpp  hashtable.h  vec.h  vector.h
engine/src/core/: application.cpp  application.h  asserts.h  clock.cpp  clock.h  event.cpp  event.h  input.cpp  input.h  logger.cpp  logger.h  memory.cpp  memory.h  ns_memory.cpp  ns_memory.h  ns_string.cpp  ns_string.h  slice.h  string.cpp  string.h
engine/src/core/string/: cstring.cpp  cstring.h  str.cpp  str.h  string.cpp  string.h
engine/src/math/: cstes.h  math.cpp  math.h  ns_math.cpp  ns_math.h
engine/src/math/types/: math_types.h  ns_quat.h  quat.h  types.h
engine/src/memory/: dynamic_allocator.cpp  dynamic_allocator.h  linear_allocator.cpp  linear_allocator.h
engine/src/platform/: filesystem.cpp  filesystem.h  platform.h  platform_linux.cpp  platform_win32.cpp
engine/src/renderer/: renderer_backend.cpp  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_image.cpp  (+15 more)
engine/src/resources/: resource_types.h
engine/src/systems/: geometry_system.cpp  geometry_system.h  material_system.cpp  material_system.h  resource_system.cpp  resource_system.h  texture_system.cpp  texture_system.h
(+55 files in other folders)
